# pytest-qgis

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  changelog-ci-config.json  mkdocs.yml  pyproject.toml  pytest_qgis.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
src/: __init__.py  pytest_qgis.py  qgis_interface.py
src/pytest_qgis/: __init__.py  _version.py  mock_qgis_classes.py  pytest_qgis.py  qgis_bot.py  qgis_interface.py  utils.py
tests/: __init__.py  conftest.py  pytest.ini  test_crs.py  test_ini.py  test_layer_cleanup.py  test_mock_qgis_classes.py  test_pytest_qgis.py  test_qgis.py  test_qgis_bot.py  test_qgis_interface.py  test_show_map.py  test_utils.py  utils.py
tests/data/: db.gpkg  small_raster.tif
tests/visual/: __init__.py  test_qgis_ui.py  test_show_map.py
