[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-qgis"
authors = [{ name = "Gispo Ltd.", email = "info@gispo.fi" }]
maintainers = [{ name = "Gispo Ltd.", email = "info@gispo.fi" }]

description = "A pytest plugin for testing QGIS python plugins"
readme = "README.md"

dynamic = ["version"]
keywords = ["pytest", "qgis", "QGIS", "PyQGIS"]

requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
dependencies = ["pytest >= 6.0"]

[project.urls]
homepage = "https://github.com/GispoCoding/pytest-qgis"
repository = "https://github.com/GispoCoding/pytest-qgis"
changelog = "https://github.com/GispoCoding/pytest-qgis/CHANGELOG.md"

[project.entry-points.pytest11]
pytest_qgis = "pytest_qgis"


[tool]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "pytest_qgis._version.__version__" }

[tool.setuptools.package-data]
pytest_qgis = ["py.typed"]


[tool.pytest.ini_options]
doctest_encoding = "utf-8"


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
disable_error_code = "misc"
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
