[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = pytest-qgis

author = Joona Laine
author_email = joona@gispo.fi
maintainer = Gispo Ltd.
maintainer_email = joona@gispo.fi

version = 1.0.3

description = A pytest plugin for testing QGIS python plugins
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytest,qgis,QGIS,PyQGIS

url = https://github.com/GispoCoding/pytest-qgis

license = GNU GPL v2.0

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
     Development Status :: 5 - Production/Stable
     Framework :: Pytest
     Intended Audience :: Developers
     Topic :: Software Development :: Testing
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Operating System :: OS Independent
     License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.5
install_requires =
    pytest>=6.2.3

[options.packages.find]
where = src

[options.package_data]
* =
    py.typed
    data/ne_50m_admin_0_countries.geojson

[options.entry_points]
pytest11 =
    pytest_qgis = pytest_qgis

[tool:pytest]
doctest_encoding = utf-8

[flake8]
max_line_length = 88
per-file-ignores =
    src/pytest_qgis/pytest_qgis.py:QGS105
    src/pytest_qgis/qgis_interface.py:N802,N803
    tests/*:ANN001,ANN201
extend-ignore =
            E203, # whitespace before ':'
            ANN101, # Missing type annotation for self in method
            PT004 # fixture '{name}' does not return anything, add leading underscore

[isort]
profile = black
multi_line_output = 3

[mypy]
disable_error_code = misc
ignore_missing_imports = true
follow_imports = silent
show_column_numbers = true
